fix: editor action menu alignment

--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -19,7 +19,7 @@
   --bg: #22272e;
   --bg-alt: var(--q-dark);
   --bg-alt2: var(--q-dark);
-  --fg: #{$grey-3};
+  --fg: #adbac7;
   --fg-alt: #{$grey-6};
 
   --base0: #{$grey-3};
