--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -117,6 +117,7 @@ body {
   // Box paddings/margins
   --default-block-padding: 16px;
   --default-block-margin: 16px;
+  --sm-block-margin: 8px;
   --default-block-border-radius: 16px;
   --sm-block-border-radius: 6px;
   --default-item-radius: 8px;
@@ -133,7 +134,7 @@ body {
   --src-block-margin-y: 16px;
 
   // Editor
-  --page-padding: 16px 30px;
+  --page-padding: 16px 56px;
   --editor-line-height: 1.8;
   --editor-headline-line-height: 1.2;
   --editor-default-line-height: 28.8px;
